--- a/styles/style.css
+++ b/styles/style.css
@@ -19,3 +19,8 @@ h2 {
     color: #34333f !important;
     font-size: 2.3rem !important;
 }
+
+.disabled {
+    pointer-events: none;
+    opacity: 0.6;
+}
