--- a/styles/main.css
+++ b/styles/main.css
@@ -8,14 +8,11 @@
 }
 
 #container {
-    max-width: 800px;
     padding: 20px;
 }
 
 #container h2 {
     font-size: 2rem;
-    margin-bottom: 20px;
-    text-decoration: underline;
 }
 
 #container p {
@@ -87,9 +84,32 @@
     }
 }
 
+#home,
+#about,
+#skills {
+    max-width: 900px;
+    padding: 20px;
+    box-shadow: 5px 0 0#000018;
+}
+
+#home h2 {
+    margin: 0;
+    text-decoration: none;
+}
+
+#home h1 {
+    font-size: 3rem;
+}
+
+#home p,
+#about p,
+#skills p {
+    color: #000018c7;
+}
+
 .contact-section p {
     margin-left: 10px;
-    color: #8181c5;
+    color: #000018c7;
 }
 
 .socials {
@@ -101,17 +121,25 @@
 
 .socials-item a {
     text-decoration: none;
-    color: #8181c5;
+    color: #000018c7;
 }
 
 .socials-item i {
-    font-size: 2rem;
+    font-size: 1.5rem;
+}
+
+#skills span {
+    color: #708AF4;
+    font-weight: bold;
 }
 
 #courses {
+    width: 1000px;
     display: flex;
     scroll-behavior: smooth;
     overflow-x: hidden;
+    padding: 20px;
+    gap: 10px;
 }
 
 .course-image-section {
@@ -125,10 +153,11 @@
 #courses img {
     max-width: 100%;
     max-height: 100%;
+    box-shadow: 5px 5px 25px #00001870;
 }
 
 #courses p {
-    margin-top: 10px;
+    margin-top: 15px;
     text-align: center;
 }
 
