--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,7 +1,7 @@
 .navigation-section {
     width: 20%;
     height: 100vh;
-    background-color: #8181c5;
+    background-color: #000018;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -13,6 +13,8 @@
 .navigation-section img {
     width: 200px;
     margin: 50px 0 10px 0;
+    box-shadow: inset 15px 15px 0 #2f2fd8;
+    border-radius: 25px;
 }
 
 .navigation-section h2 {
